--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="cursos.html">Cursos</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
                     <li><a href="noticias.html">Noticias</a></li>
-                    <li><a href="galeria.html">Galeria</a></li>
+                    <li><a href="galeria.html">Galería</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </div>
