--- a/cursos.html
+++ b/cursos.html
@@ -28,13 +28,16 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
-                    <li><a href="#">Cursos</a></li>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="noticias.html">Noticias</a></li>
+                    <li><a href="galeria.html">Galería</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!--Inicio Header-->
+    <!-- Fin Navbar-->
     <!-- Header -->
     <header class="container-fluid header_academia">
         <h1>Te invitamos a participar de este arte de las manualidades</h1>
@@ -88,7 +91,7 @@
                             <p>Clases de 15 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Sandra Mena</p>
+                            <p>Monitor: Marcia Contreras</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -161,7 +164,7 @@
                             <p>Clases de 6 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Marcela Vergara</p>
+                            <p>Monitor: Sandra Mena</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -234,7 +237,7 @@
                             <p>Clases de 15 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Gustavo Figueroa</p>
+                            <p>Monitor: Camilo Sepúlveda</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -310,7 +313,7 @@
                             <p>Clases de 15 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Sandra Mena</p>
+                            <p>Monitor: Marcia Contreras</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -383,7 +386,7 @@
                             <p>Clases de 6 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Marcela Vergara</p>
+                            <p>Monitor: Sandra Mena</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -456,7 +459,7 @@
                             <p>Clases de 15 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Gustavo Figueroa</p>
+                            <p>Monitor: Camilo Sepúlveda</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -532,7 +535,7 @@
                             <p>Clases de 15 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Sandra Mena</p>
+                            <p>Monitor: Marcia Contreras</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -605,7 +608,7 @@
                             <p>Clases de 6 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Marcela Vergara</p>
+                            <p>Monitor: Sandra Mena</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -678,7 +681,7 @@
                             <p>Clases de 15 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Gustavo Figueroa</p>
+                            <p>Monitor: Camilo Sepúlveda</p>
                         </div>
                     </div>
                     <div class="footer">
