--- a/galeria.html
+++ b/galeria.html
@@ -30,12 +30,16 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
-                    <li><a href="#">Cursos</a></li>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="noticias.html">Noticias</a></li>
+                    <li><a href="galeria.html">Galería</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <!-- Fin Navbar-->
     <!-- Header -->
     <header class="container-fluid header_academia">
         <h1>Te invitamos a participar de este arte de las manualidades</h1>
