--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                 </button>
-
+                <a class="navbar-brand" href="index.html"><img class="logo" src="assets/img/1.png" alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
-                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="cursos.html">Cursos</a></li>
                     <li><a href="noticias.html">Noticias</a></li>
                     <li><a href="galeria.html">Galería</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
@@ -39,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <!--Inicio Header-->
+    <!-- Fin Navbar-->
     <!-- Header -->
     <header class="container-fluid header_academia">
         <h1>Te invitamos a participar de este arte de las manualidades</h1>
@@ -65,28 +66,55 @@
     <!--Fin Header-->
     <!-- Swiper -->
     <div class="swiper-container">
-      <div class="parallax-bg" style="background-image:url(http://lorempixel.com/900/600/nightlife/2/)" data-swiper-parallax="-23%"></div>
+      <div class="parallax-bg" style="background-image:url(assets/img/fondo.jpg)" data-swiper-parallax="-23%"></div>
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <div class="title" data-swiper-parallax="-300">Slide 1</div>
+          <div class="title" data-swiper-parallax="-300">Te invitamos a participar de este arte de las manualidades</div>
           <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
           <div class="text" data-swiper-parallax="-100">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla laoreet justo vitae porttitor porttitor. Suspendisse in sem justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec, tincidunt ut libero. Aenean feugiat non eros quis feugiat.</p>
+            <p>Te invitamos a participar de este arte de las manualidades</p>
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="title" data-swiper-parallax="-300" data-swiper-parallax-opacity="0">Slide 2</div>
-          <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-          <div class="text" data-swiper-parallax="-100">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla laoreet justo vitae porttitor porttitor. Suspendisse in sem justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec, tincidunt ut libero. Aenean feugiat non eros quis feugiat.</p>
-          </div>
+            <div class="row">
+                <div class="col-sm-8 col-md-7">
+                    <div class="subtitle" data-swiper-parallax="-200">Nuevo</div>
+                    <div class="title" data-swiper-parallax="-300">Seminario especial de pinceladas sobre cerámica</div>
+                    <div class="text" data-swiper-parallax="-100">
+                      <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-md-5">
+                    <img src="assets/img/seminario_cinta.jpg" alt="" class="img-responsive">
+                </div>
+            </div>
         </div>
         <div class="swiper-slide">
-          <div class="title" data-swiper-parallax="-300">Slide 3</div>
-          <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-          <div class="text" data-swiper-parallax="-100">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla laoreet justo vitae porttitor porttitor. Suspendisse in sem justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec, tincidunt ut libero. Aenean feugiat non eros quis feugiat.</p>
-          </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="subtitle" data-swiper-parallax="-200">Nuevo</div>
+                    <div class="title" data-swiper-parallax="-300">Seminario de Decoupage</div>
+                    <div class="text" data-swiper-parallax="-100">
+                      <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-xs-6 col-sm-3">
+                            <h3>Socializar</h3>
+                        </div>
+                        <div class="col-xs-6 col-sm-3">
+                            <h3>Aliviar el estres</h3>
+                        </div>
+                        <div class="col-xs-6 col-sm-3">
+                            <h3>Recreativo</h3>
+                        </div>
+                        <div class="col-xs-6 col-sm-3">
+                            <h3>Aprendizaje</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
       </div>
       <!-- Add Pagination -->
@@ -97,7 +125,25 @@
     </div>
 
 
-    <!--Inicio cursos -->
+    <!-- Swiper -->
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="assets/img/noticia_4.jpg"><p>Te invitamos a participar de este arte de las manualidades</p></div>
+                    <div class="swiper-slide"><img src="assets/img/noticia_3.jpg"></div>
+                    <div class="swiper-slide"><img src="assets/img/bordado.jpg"></div>
+                </div>
+                <!-- Add Pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Add Arrows -->
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+            <!-- Add Arrows -->
+
+
+
+
+
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -127,7 +173,7 @@
                             <p>Clases de 15 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Sandra Mena</p>
+                            <p>Monitor: Marcia Contreras</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -200,7 +246,7 @@
                             <p>Clases de 6 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Marcela Vergara</p>
+                            <p>Monitor: Sandra Mena</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -273,7 +319,7 @@
                             <p>Clases de 15 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Gustavo Figueroa</p>
+                            <p>Monitor: Camilo Sepúlveda</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -349,7 +395,7 @@
                             <p>Clases de 15 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Sandra Mena</p>
+                            <p>Monitor: Marcia Contreras</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -422,7 +468,7 @@
                             <p>Clases de 6 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Marcela Vergara</p>
+                            <p>Monitor: Sandra Mena</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -495,7 +541,7 @@
                             <p>Clases de 15 personas</p>
                         </div>
                         <div class="monitor">
-                            <p>Monitor: Gustavo Figueroa</p>
+                            <p>Monitor: Camilo Sepúlveda</p>
                         </div>
                     </div>
                     <div class="footer">
@@ -567,7 +613,7 @@
                 </div>
                 <div class="nosotros__inner_monitor">
                     <img src="assets/img/monitor3.jpg" alt="Monitor">
-                    <h4>Sandra Mena</h4>
+                    <h4>Marcia Contreras</h4>
                     <p>@smena<br>+56 921305462</p>
                 </div>
                 <div class="nosotros__inner_monitor">
@@ -605,6 +651,37 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
     <!-- Swiper slider -->
     <script src="assets/js/swiper.min.js"></script>
+    <!-- Initialize Swiper -->
+     <script>
+       var swiper = new Swiper('.swiper-container', {
+         speed: 600,
+         parallax: true,
+         pagination: {
+           el: '.swiper-pagination',
+           clickable: true,
+         },
+         navigation: {
+           nextEl: '.swiper-button-next',
+           prevEl: '.swiper-button-prev',
+         },
+       });
+     </script>
+     <!-- Initialize Swiper -->
+     <script>
+         var swiper = new Swiper('.swiper-container', {
+           slidesPerView: 1,
+           spaceBetween: 30,
+           loop: true,
+           pagination: {
+             el: '.swiper-pagination',
+             clickable: true,
+           },
+           navigation: {
+             nextEl: '.swiper-button-next',
+             prevEl: '.swiper-button-prev',
+           },
+         });
+     </script>
 </body>
 
 </html>
