--- a/nosotros.html
+++ b/nosotros.html
@@ -28,13 +28,16 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
-                    <li><a href="#">Cursos</a></li>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="noticias.html">Noticias</a></li>
+                    <li><a href="galeria.html">Galería</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!--Inicio Header-->
+    <!-- Fin Navbar-->
     <!-- Header -->
     <header class="container-fluid header_academia">
         <h1>Te invitamos a participar de este arte de las manualidades</h1>
@@ -62,23 +65,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-offset-1 col-md-9 historia">
-                <h2>Historia</h2>
-                <p>La Fundación Niño y Cáncer, inicialmente llamada Fundación Oncológica Las Condes, es una
-                entidad <b>sin fines de lucro</b> que fue creada el 23 de noviembre de 1992 y obteniendo personalidad Jurídica
-                el 2 de febrero del 1993 por Decreto Supremo N° 143 y publicado en el Diario Oficial el 2 de marzo de
-                1993. Por el decreto Nº 994 publicado en el Diario Oficial Nº 36.817 del 20 de noviembre del año 2000,
-                se aprueba la reforma de los estatutos de Fundación Oncológica Las Condes, autorizándose el cambio
-                de nombre a Fundación Niño y Cáncer.<br><br>El objetivo principal de la Fundación Niño y Cáncer es contribuir
-                en el tratamiento de todos los niños con cáncer y/o leucemia de escasos recursos y/o en situación de discapacidad,
-                atendidos en los Hospitales Públicos de nuestro país (Plan Auge y GES) ayudando a su desarrollo, mejorando su
-                calidad de vida y fortaleciendo su integración social y familiar.<br><br>Por este motivo en las líneas de trabajo
-                de la Fundación esto tiene un rol preponderante y los diversos Proyectos están enfocados a la reinserción en la
-                comunidad de nuestros pacientes, potenciando sus habilidades.<br><br>La curación del cáncer es una tarea fundamental,
-                sin embargo, todo el esfuerzo y sacrificio de los pacientes, sus familias, equipo médico y Sistema de Salud, se
-                pierden si no se logra una real integración de:<br> <b>Pacientes - Familia - Comunidad</b>.<br><br>Desde sus inicios Fundación
-                Niño y Cáncer ha tenido importantes logros que contribuyen a lograr un mejor tratamiento para los niños con cáncer
-                y muy especialmente a la reinserción de estos niños a sus hogares y a la comunidad completando el círculo:<br><br>
-                <b>Sano – Enfermo – Tratamiento – Curación –Rehabilitación – Reinserción – Sano</b></p>
+                <p>Somos un grupo dedicado a las manualidades y queremos compartir nuestro conocimiento a más personas, además de entregar un espacio para sociabilizar, compartir y aprender distintas técnicas.</p>
+                <p>Aquí podrás encontrar toda la información sobre los seminarios, talleres y cursos impartidos.</p>
+                <p> Las inscripciones se pueden realizar completando el formulario presente en la información del curso y nos contáctaremos contigo para confirmar la reserva del cupo.</p>
             </div>
         </div>
     </div>
@@ -87,42 +76,39 @@
     <div class="container">
         <div class="row">
             <div class="col-md-offset-1 col-md-9 objetivo">
-                <h2>Objetivos</h2>
-                <h4>1. Curación</h4>
-                <ul>
-                    <li>Remodelación y reestructuración de unidades de oncología pediátrica de los hospitales públicos</li>
-                    <li>Manual para padres</li>
-                    <li>Apoyo a programas de capacitación</li>
-                </ul>
-                <h4>2. Tratamiento</h4>
-                <ul>
-                    <li>Psicoterapia de Apoyo</li>
-                    <li>Departamentos de Acogida</li>
-                </ul>
-                <h4>3. Rehabilitación</h4>
-                <ul>
-                    <li>Becas de estudios superiores</li>
-                </ul>
-                <h4>4. Recreación</h4>
-                <ul>
-                    <li>XIII Torneo de Futbolito y Porristas</li>
-                    <li>Montaña de la Alegría - Taller de Ski</li>
-                    <li>XXI Camping por los Sueños 2016</li>
-                </ul>
-                <h4>5. Solidaridad</h4>
-                <ul>
-                    <li>Entrega de colaciones y material didáctico</li>
-                    <li>Entrega de almuerzos</li>
-                    <li>Cenas de Navidad</li>
-                    <li> Entrega de Lockers para padres</li>
-                    <li>Sillones para madres</li>
-                </ul>
-                <h4>6. Educación médica</h4>
-                <ul>
-                    <li>Manuales para padres de niños oncológicos</li>
-                    <li>Apoyo permanente a equipo de seguimiento de pacientes recuperados de cáncer</li>
-                    <li>Apoyo y auspicio de jornadas “Sobrevivientes de Cáncer”</li>
-                </ul>
+                <h3>Seminarios</h3>
+                <p>En un seminario todos los participantes desarrollan el mismo proyecto, incluye apuntes, la clase y los materiales. Tiene una duración de 3 horas y se lleva el trabajo terminado. Asistencia previa inscripción y cancelación.</p>
+                <p><b>Metodología:</b> Clases de 6 personas. Cada alumno recibe una atención personalizada, respondiendo a todas las consultas e inquietudes en cuanto a la técnica que eligen.</p>
+
+                <h3>Cursos</h3>
+                <p>En un curso los participantes van desarrollando distintos proyectos, las temáticas son variadas, parten de un nivel básico hasta alcanzar un nivel más avanzado, los materiales no estan incluidos. Se realizan 4 clases al mes de 3 horas cada una. Asistencia previa inscripción y cancelación.</p>
+                <p><b>Metodología:</b> Hasta 15 personas por clase. Cada alumno recibe una atención personalizada, respondiendo a todas las consultas e inquietudes en cuanto a la técnica que eligen.</p>
+                <p>Cada clase es un trabajo.</p>
+
+                <h3>Talleres</h3>
+                <p>En un taller los participantes van desarrollando distintos proyectos de solo una temática, parten de un nivel básico hasta alcanzar un nivel más avanzado, los materiales no estan incluidos. Se realizan 4 clases al mes de 3 horas cada una. Asistencia previa inscripción y cancelación.</p>
+                <p><b>Metodología:</b> Hasta 15 personas por clase. Cada alumno recibe una atención personalizada, respondiendo a todas las consultas e inquietudes en cuanto a la técnica que eligen.</p>
+                <p>Cada clase es un trabajo.</p>
+
+                <div class="nosotros__inner">
+                    <h3>Monitores</h3>
+                    <div class="nosotros__inner_monitor">
+                        <img src="assets/img/monitor2.jpg" alt="Monitor">
+                        <h4>Marcia Contreras</h4>
+                        <p>@mcontreras<br>+56 928305661</p>
+                    </div>
+                    <div class="nosotros__inner_monitor">
+                        <img src="assets/img/monitor3.jpg" alt="Monitor">
+                        <h4>Sandra Mena</h4>
+                        <p>@smena<br>+56 921305462</p>
+                    </div>
+                    <div class="nosotros__inner_monitor">
+                        <img src="assets/img/monitor1.jpg" alt="Monitor">
+                        <h4>Camilo Sepúlveda</h4>
+                        <p>@csepulveda<br>+56 930284253</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
