--- a/noticias.html
+++ b/noticias.html
@@ -28,13 +28,16 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
-                    <li><a href="#">Cursos</a></li>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="noticias.html">Noticias</a></li>
+                    <li><a href="galeria.html">Galería</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!--Inicio Header-->
+    <!-- Fin Navbar-->
     <!-- Header -->
     <header class="container-fluid header_academia">
         <h1>Te invitamos a participar de este arte de las manualidades</h1>
@@ -62,42 +65,41 @@
    <div class="container">
        <div class="row">
            <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-7 articulo">
-               <img src="assets/img/pintura_1.jpg" alt="Viaje a la nieve" class="img-responsive">
-               <h3>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.
-               Se traduce en "Una Terapia para el Alma"</h3>
-               <p>La Fundación Niño y Cáncer quiere agradecer la importante ayuda recibida que ha permitido realizar con un gran éxito el Taller de Ski, como parte del Programa Montaña de la alegría 2018. En esta oportunidad 3 niños Ecuatorianos, una niña Boliviana y 3 chilenos han podido disfrutar de su estadía en la Escuela de Montaña del Ejercito de Chile del 20 al 24 de Agosto 2018 aprendiendo a esquiar en Portillo.</p>
+               <div class="recorte">
+                  <img src="assets/img/noticia_1.jpg" alt="" class="img-responsive">
+                </div>
+                <h3>Sampler básico</h3>
+                <p>Primer curso de patchwork, se trabajó un sampler con motivos a partir de 2 colores diferentes, pudiendo variar telas y crear diseños personalizados. </p>
+                <p><a href="#" class="vermas" role="button">Ver más &rarr;</a></p>
+           </div>
+       </div>
+       <div class="row">
+           <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-7 articulo">
+                <div class="recorte">
+                   <img src="assets/img/noticia_2.jpg" alt="" class="img-responsive">
+                </div>
+                <h3>Finalizacion taller decoupage</h3>
+                <p>Hermosos trabajos realizados por nuestros alumnos quienes participaron activamente en el taller DECOUPAGE, a cargo de Marcia Contreras, Muchas gracias a todos por participar.</p>
+                <p><a href="#" class="vermas" role="button">Ver más &rarr;</a></p>
+           </div>
+       </div>
+       <div class="row">
+           <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-7 articulo">
+               <div class="recorte">
+                  <img src="assets/img/noticia_3.jpg" alt="" class="img-responsive">
+               </div>
+               <h3>Taller decoupage</h3>
+               <p>¿Qué es el decoupage? El arte del decoupage es básicamente el pegado de recortes de papel de distintos colores sobre el objeto elegido a decorar, para producir diferentes efectos de pintura. </p>
                <p><a href="#" class="vermas" role="button">Ver más &rarr;</a></p>
            </div>
        </div>
        <div class="row">
            <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-7 articulo">
-               <img src="assets/img/caja_2.jpg" alt="" class="img-responsive">
-               <h3>El Hospital San Juan de Dios tiene una nueva unidad de Oncología Infantil</h3>
-               <p>La Fundación Niño y Cáncer inauguró el 20 de enero de 2012, la remodelación de la Unidad de Oncología Pediátrica del Hospital San Juan de Dios con la asistencia del Dr. Juan Quintana, presidente de la Fundación, acompañado de parte del Directorio, Voluntarias y Equipo de Trabajo, Dr. Kehr Director del Hospital, Dra. Varas; Jefe de la Unidad, Dr. Salinas; Jefe de Pediatría, representantes del Ministerio de Salud, y un numeroso grupo de médicos, enfermeras y personal del servicio.</p>
-               <p><a href="#" class="vermas" role="button">Ver más &rarr;</a></p>
-           </div>
-       </div>
-       <div class="row">
-           <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-7 articulo">
-               <img src="assets/img/caja_4.jpg" alt="" class="img-responsive">
-               <h3>Inauguración y restructuración de la Unidad de Oncología Pediátrica de Concepción. Otro gran logro de la Fundación Niño y Cáncer</h3>
-               <p>El Hospital Guillermo Gran Benavente se inauguró en 1944, después del gran terremoto de 1939. Atiende a los pacientes de la 8ª Región recibiendo   unos 60 a 70 pacientes con cáncer o leucemia nuevos por año, lo que es comparable con los grandes hospitales pediátricos de Santiago.</p>
-               <p><a href="#" class="vermas" role="button">Ver más &rarr;</a></p>
-           </div>
-       </div>
-       <div class="row">
-           <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-7 articulo">
-               <img src="assets/img/pintura_3.jpg" alt="Viaje a la nieve" class="img-responsive">
-               <h3>Celebración de Navidad en los Departamentos de la Fundación</h3>
-               <p>El día 15 de diciembre se celebró la Fiesta de Navidad, para los  niños que utilizan el beneficio de los departamentos, que se realizó en la sala de eventos de los departamentos de Domínica. Consistió en una actividad entretenida y a la vez significativa y emocionalmente. Los niños, las madres y las personas de la Fundación que asistieron, cantaron villancicos y para esto nos colaboró el voluntario Manuel Córdova Astorga.</p>
-               <p><a href="#" class="vermas" role="button">Ver más &rarr;</a></p>
-           </div>
-       </div>
-       <div class="row">
-           <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-7 articulo">
-               <img src="assets/img/caja_1.jpg" alt="" class="img-responsive">
-               <h3>SAG entrega canastas solidarias a Fundación Niño y Cáncer</h3>
-               <p>Esta emotiva historia comienza el pasado mes de julio cuando celebrábamos el 43º aniversario de nuestro Servicio Agrícola y Ganadero (SAG). En la oportunidad se hizo el llamado a reunir la mayor cantidad de productos comestibles perecibles, con el objetivo de ayudar a un establecimiento de beneficencia.</p>
+               <div class="recorte">
+                  <img src="assets/img/noticia_4.jpg" alt="" class="img-responsive">
+               </div>
+               <h3>Dias de arte 2018. VI jornadas de arte decorativo</h3>
+               <p>Los pasados días se llevó a cabo en Montevideo la IX edición de Dias de Arte, Convención de arte decorativo de realización anual.</p>
                <p><a href="#" class="vermas" role="button">Ver más &rarr;</a></p>
            </div>
        </div>
