--- a/contacto.html
+++ b/contacto.html
@@ -28,12 +28,16 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
-                    <li><a href="#">Cursos</a></li>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="noticias.html">Noticias</a></li>
+                    <li><a href="galeria.html">Galería</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <!-- Fin Navbar-->
     <!-- Header -->
     <header class="container-fluid header_academia">
         <h1>Te invitamos a participar de este arte de las manualidades</h1>
@@ -60,27 +64,29 @@
     <!--Inicio sección formulario -->
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-5">
-                <h2 class="titulo-formulario">Ayuda a esta noble causa y si tenes dudas contáctanos</h2>
+            <div class="col-xs-12 col-md-offset-1 col-md-9">
+                <h2 class="titulo-formulario">Si tenes dudas contáctanos</h2>
             </div>
-            <div class="col-xs-12 col-offset-sm-1 col-sm-6">
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-md-offset-1 col-md-9">
                 <form class="form-horizontal">
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputEmail3" placeholder="Ingrese su nombre">
+                            <input type="text" class="form-control" id="inputEmail3" placeholder="Nombre Apellido">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                            <input type="email" class="form-control" id="inputEmail3" placeholder="example@mail.com">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="inputPassword3" class="col-sm-2 control-label">Teléfono</label>
                         <div class="col-sm-10">
-                            <input type="tel" class="form-control" id="inputPassword3" placeholder="Teléfono">
+                            <input type="tel" class="form-control" id="inputPassword3" placeholder="930213568">
                         </div>
                     </div>
                     <div class="form-group">
@@ -88,12 +94,10 @@
                         <div class="col-sm-10">
                             <select class="form-control">
                                 <option>Consulta general</option>
-                                <option>Voluntariado</option>
-                                <option>Donar</option>
-                                <option>Apoyo familiar</option>
-                                <option>Eventos</option>
-                                <option>postulaciones</option>
-                                <option>Empresas</option>
+                                <option>Inscripciones</option>
+                                <option>Talleres</option>
+                                <option>Cursos</option>
+                                <option>Seminarios</option>
                             </select>
                         </div>
                     </div>
@@ -105,7 +109,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary">Enviar</button>
+                            <button type="submit" class="btn clase-button">Enviar</button>
                         </div>
                     </div>
 
